add: AppointmentRepository unit tests